# swagger.json
@@ -81,9 +81,7 @@
             }
           }
         },
-        "tags": [
-          "auth"
-        ]
+        "tags": ["auth"]
       }
     },
     "/api/auth/refresh": {
@@ -102,9 +100,7 @@
             }
           }
         },
-        "tags": [
-          "auth"
-        ]
+        "tags": ["auth"]
       }
     },
     "/api/auth/logout": {
@@ -116,9 +112,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "auth"
-        ]
+        "tags": ["auth"]
       }
     },
     "/api/user/{id}": {
@@ -158,9 +152,7 @@
             }
           }
         },
-        "tags": [
-          "user"
-        ]
+        "tags": ["user"]
       },
       "put": {
         "operationId": "update",
@@ -196,9 +188,7 @@
             }
           }
         },
-        "tags": [
-          "user"
-        ]
+        "tags": ["user"]
       },
       "delete": {
         "operationId": "delete",
@@ -224,9 +214,7 @@
             }
           }
         },
-        "tags": [
-          "user"
-        ]
+        "tags": ["user"]
       }
     },
     "/api/user": {
@@ -300,9 +288,7 @@
             }
           }
         },
-        "tags": [
-          "user"
-        ]
+        "tags": ["user"]
       },
       "put": {
         "operationId": "create",
@@ -329,9 +315,7 @@
             }
           }
         },
-        "tags": [
-          "user"
-        ]
+        "tags": ["user"]
       }
     },
     "/api/session/{id}": {
@@ -371,9 +355,7 @@
             }
           }
         },
-        "tags": [
-          "session"
-        ]
+        "tags": ["session"]
       },
       "put": {
         "operationId": "update",
@@ -409,9 +391,7 @@
             }
           }
         },
-        "tags": [
-          "session"
-        ]
+        "tags": ["session"]
       },
       "delete": {
         "operationId": "delete",
@@ -437,9 +417,7 @@
             }
           }
         },
-        "tags": [
-          "session"
-        ]
+        "tags": ["session"]
       }
     },
     "/api/session": {
@@ -513,9 +491,7 @@
             }
           }
         },
-        "tags": [
-          "session"
-        ]
+        "tags": ["session"]
       },
       "put": {
         "operationId": "create",
@@ -542,9 +518,7 @@
             }
           }
         },
-        "tags": [
-          "session"
-        ]
+        "tags": ["session"]
       }
     },
     "/api/role/{id}": {
@@ -584,9 +558,7 @@
             }
           }
         },
-        "tags": [
-          "role"
-        ]
+        "tags": ["role"]
       },
       "put": {
         "operationId": "update",
@@ -622,9 +594,7 @@
             }
           }
         },
-        "tags": [
-          "role"
-        ]
+        "tags": ["role"]
       },
       "delete": {
         "operationId": "delete",
@@ -650,9 +620,7 @@
             }
           }
         },
-        "tags": [
-          "role"
-        ]
+        "tags": ["role"]
       }
     },
     "/api/role": {
@@ -726,9 +694,7 @@
             }
           }
         },
-        "tags": [
-          "role"
-        ]
+        "tags": ["role"]
       },
       "put": {
         "operationId": "create",
@@ -755,9 +721,7 @@
             }
           }
         },
-        "tags": [
-          "role"
-        ]
+        "tags": ["role"]
       }
     },
     "/api/user-role/{id}": {
@@ -797,9 +761,7 @@
             }
           }
         },
-        "tags": [
-          "user-role"
-        ]
+        "tags": ["user-role"]
       },
       "put": {
         "operationId": "update",
@@ -835,9 +797,7 @@
             }
           }
         },
-        "tags": [
-          "user-role"
-        ]
+        "tags": ["user-role"]
       },
       "delete": {
         "operationId": "delete",
@@ -863,9 +823,7 @@
             }
           }
         },
-        "tags": [
-          "user-role"
-        ]
+        "tags": ["user-role"]
       }
     },
     "/api/user-role": {
@@ -939,9 +897,7 @@
             }
           }
         },
-        "tags": [
-          "user-role"
-        ]
+        "tags": ["user-role"]
       },
       "put": {
         "operationId": "create",
@@ -968,9 +924,7 @@
             }
           }
         },
-        "tags": [
-          "user-role"
-        ]
+        "tags": ["user-role"]
       }
     },
     "/api/person/{id}": {
@@ -1010,9 +964,7 @@
             }
           }
         },
-        "tags": [
-          "person"
-        ]
+        "tags": ["person"]
       },
       "put": {
         "operationId": "update",
@@ -1048,9 +1000,7 @@
             }
           }
         },
-        "tags": [
-          "person"
-        ]
+        "tags": ["person"]
       },
       "delete": {
         "operationId": "delete",
@@ -1076,9 +1026,7 @@
             }
           }
         },
-        "tags": [
-          "person"
-        ]
+        "tags": ["person"]
       }
     },
     "/api/person": {
@@ -1152,9 +1100,7 @@
             }
           }
         },
-        "tags": [
-          "person"
-        ]
+        "tags": ["person"]
       },
       "put": {
         "operationId": "create",
@@ -1181,9 +1127,7 @@
             }
           }
         },
-        "tags": [
-          "person"
-        ]
+        "tags": ["person"]
       }
     },
     "/api/company/{id}": {
@@ -1223,9 +1167,7 @@
             }
           }
         },
-        "tags": [
-          "company"
-        ]
+        "tags": ["company"]
       },
       "put": {
         "operationId": "update",
@@ -1261,9 +1203,7 @@
             }
           }
         },
-        "tags": [
-          "company"
-        ]
+        "tags": ["company"]
       },
       "delete": {
         "operationId": "delete",
@@ -1289,9 +1229,7 @@
             }
           }
         },
-        "tags": [
-          "company"
-        ]
+        "tags": ["company"]
       }
     },
     "/api/company": {
@@ -1365,9 +1303,7 @@
             }
           }
         },
-        "tags": [
-          "company"
-        ]
+        "tags": ["company"]
       },
       "put": {
         "operationId": "create",
@@ -1394,9 +1330,7 @@
             }
           }
         },
-        "tags": [
-          "company"
-        ]
+        "tags": ["company"]
       }
     },
     "/api/job/{id}": {
@@ -1436,9 +1370,7 @@
             }
           }
         },
-        "tags": [
-          "job"
-        ]
+        "tags": ["job"]
       },
       "put": {
         "operationId": "update",
@@ -1474,9 +1406,7 @@
             }
           }
         },
-        "tags": [
-          "job"
-        ]
+        "tags": ["job"]
       },
       "delete": {
         "operationId": "delete",
@@ -1502,9 +1432,7 @@
             }
           }
         },
-        "tags": [
-          "job"
-        ]
+        "tags": ["job"]
       }
     },
     "/api/job": {
@@ -1578,9 +1506,7 @@
             }
           }
         },
-        "tags": [
-          "job"
-        ]
+        "tags": ["job"]
       },
       "put": {
         "operationId": "create",
@@ -1607,9 +1533,7 @@
             }
           }
         },
-        "tags": [
-          "job"
-        ]
+        "tags": ["job"]
       }
     }
   },
@@ -1652,13 +1576,7 @@
             }
           }
         },
-        "required": [
-          "jti",
-          "sub",
-          "name",
-          "email",
-          "roles"
-        ]
+        "required": ["jti", "sub", "name", "email", "roles"]
       },
       "LoginAuthDto": {
         "type": "object",
@@ -1670,10 +1588,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "username",
-          "password"
-        ]
+        "required": ["username", "password"]
       },
       "LoginAuthResponseDto": {
         "type": "object",
@@ -1682,9 +1597,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "accessToken"
-        ]
+        "required": ["accessToken"]
       },
       "Session": {
         "type": "object",
@@ -1886,9 +1799,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "ConnectUserRoleDto": {
         "type": "object",
@@ -1897,9 +1808,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "userRoleId"
-        ]
+        "required": ["userRoleId"]
       },
       "CreateUserRolesRelationInputDto": {
         "type": "object",
@@ -1911,9 +1820,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "ConnectSessionDto": {
         "type": "object",
@@ -1922,9 +1829,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "sessionId"
-        ]
+        "required": ["sessionId"]
       },
       "CreateUserSessionsRelationInputDto": {
         "type": "object",
@@ -1936,9 +1841,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreateUserDto": {
         "type": "object",
@@ -1968,13 +1871,7 @@
             "$ref": "#/components/schemas/CreateUserSessionsRelationInputDto"
           }
         },
-        "required": [
-          "firstName",
-          "lastName",
-          "email",
-          "password",
-          "salt"
-        ]
+        "required": ["firstName", "lastName", "email", "password", "salt"]
       },
       "UpdateUserRolesRelationInputDto": {
         "type": "object",
@@ -1986,9 +1883,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateUserSessionsRelationInputDto": {
         "type": "object",
@@ -2000,9 +1895,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateUserDto": {
         "type": "object",
@@ -2043,9 +1936,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "ConnectUserDto": {
         "type": "object",
@@ -2054,9 +1945,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "userId"
-        ]
+        "required": ["userId"]
       },
       "CreateSessionUserRelationInputDto": {
         "type": "object",
@@ -2065,9 +1954,7 @@
             "$ref": "#/components/schemas/ConnectUserDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreateSessionDto": {
         "type": "object",
@@ -2079,9 +1966,7 @@
             "$ref": "#/components/schemas/CreateSessionUserRelationInputDto"
           }
         },
-        "required": [
-          "user"
-        ]
+        "required": ["user"]
       },
       "UpdateSessionUserRelationInputDto": {
         "type": "object",
@@ -2090,9 +1975,7 @@
             "$ref": "#/components/schemas/ConnectUserDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateSessionDto": {
         "type": "object",
@@ -2115,9 +1998,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "CreateRoleUsersRelationInputDto": {
         "type": "object",
@@ -2129,9 +2010,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreateRoleDto": {
         "type": "object",
@@ -2146,9 +2025,7 @@
             "$ref": "#/components/schemas/CreateRoleUsersRelationInputDto"
           }
         },
-        "required": [
-          "name"
-        ]
+        "required": ["name"]
       },
       "UpdateRoleUsersRelationInputDto": {
         "type": "object",
@@ -2160,9 +2037,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateRoleDto": {
         "type": "object",
@@ -2188,9 +2063,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "CreateUserRoleUserRelationInputDto": {
         "type": "object",
@@ -2199,9 +2072,7 @@
             "$ref": "#/components/schemas/ConnectUserDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "ConnectRoleDto": {
         "type": "object",
@@ -2210,9 +2081,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "roleId"
-        ]
+        "required": ["roleId"]
       },
       "CreateUserRoleRoleRelationInputDto": {
         "type": "object",
@@ -2221,9 +2090,7 @@
             "$ref": "#/components/schemas/ConnectRoleDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreateUserRoleDto": {
         "type": "object",
@@ -2238,10 +2105,7 @@
             "$ref": "#/components/schemas/CreateUserRoleRoleRelationInputDto"
           }
         },
-        "required": [
-          "user",
-          "role"
-        ]
+        "required": ["user", "role"]
       },
       "UpdateUserRoleUserRelationInputDto": {
         "type": "object",
@@ -2250,9 +2114,7 @@
             "$ref": "#/components/schemas/ConnectUserDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateUserRoleRoleRelationInputDto": {
         "type": "object",
@@ -2261,9 +2123,7 @@
             "$ref": "#/components/schemas/ConnectRoleDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateUserRoleDto": {
         "type": "object",
@@ -2432,9 +2292,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "ConnectJobDto": {
         "type": "object",
@@ -2443,9 +2301,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "jobId"
-        ]
+        "required": ["jobId"]
       },
       "CreatePersonJobRelationInputDto": {
         "type": "object",
@@ -2454,9 +2310,7 @@
             "$ref": "#/components/schemas/ConnectJobDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "ConnectCompanyDto": {
         "type": "object",
@@ -2465,9 +2319,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "companyId"
-        ]
+        "required": ["companyId"]
       },
       "CreatePersonCompanyRelationInputDto": {
         "type": "object",
@@ -2476,9 +2328,7 @@
             "$ref": "#/components/schemas/ConnectCompanyDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreatePersonDto": {
         "type": "object",
@@ -2521,9 +2371,7 @@
             "$ref": "#/components/schemas/ConnectJobDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdatePersonCompanyRelationInputDto": {
         "type": "object",
@@ -2532,9 +2380,7 @@
             "$ref": "#/components/schemas/ConnectCompanyDto"
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdatePersonDto": {
         "type": "object",
@@ -2572,9 +2418,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "ConnectPersonDto": {
         "type": "object",
@@ -2583,9 +2427,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "personId"
-        ]
+        "required": ["personId"]
       },
       "CreateCompanyPeopleRelationInputDto": {
         "type": "object",
@@ -2597,9 +2439,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreateCompanyDto": {
         "type": "object",
@@ -2614,9 +2454,7 @@
             "$ref": "#/components/schemas/CreateCompanyPeopleRelationInputDto"
           }
         },
-        "required": [
-          "name"
-        ]
+        "required": ["name"]
       },
       "UpdateCompanyPeopleRelationInputDto": {
         "type": "object",
@@ -2628,9 +2466,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateCompanyDto": {
         "type": "object",
@@ -2656,9 +2492,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "data"
-        ]
+        "required": ["data"]
       },
       "CreateJobPeopleRelationInputDto": {
         "type": "object",
@@ -2670,9 +2504,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "CreateJobDto": {
         "type": "object",
@@ -2687,9 +2519,7 @@
             "$ref": "#/components/schemas/CreateJobPeopleRelationInputDto"
           }
         },
-        "required": [
-          "name"
-        ]
+        "required": ["name"]
       },
       "UpdateJobPeopleRelationInputDto": {
         "type": "object",
@@ -2701,9 +2531,7 @@
             }
           }
         },
-        "required": [
-          "connect"
-        ]
+        "required": ["connect"]
       },
       "UpdateJobDto": {
         "type": "object",
